syntax = "proto3";

package rbac.v1;

option go_package = "github.com/tkeel-io/tkeel/api/rbac/v1;v1";
option java_multiple_files = true;
option java_package = "dev.tkeel.api.rbac.v1";

// @plugins=protoc-gen-go-errors
// 错误
enum Error {
  // 未知类型
  // @code=UNKNOWN
  ERR_UNKNOWN = 0;
  // 请求参数无效
  // @code=INVALID_ARGUMENT
  ERR_INVALID_ARGUMENT = 1;
  // 请求后端存储错误
  // @code=INTERNAL
  ERR_INTERNAL_STORE = 2;
  // 内部错误
  // @code=INTERNAL
  ERR_INTERNAL_ERROR = 3;
  // 资源不存在
  // @code=INTERNAL
  ERR_RESOURCE_NOT_FOUND = 4;
}